Increase streamer bar carousel element line height to prevent clipping

--- a/css/streamerBar.css
+++ b/css/streamerBar.css
@@ -32,6 +32,7 @@
     height: 140px;
     min-height: auto;
     margin-right: var(--carousel-element-margin-right);
+    line-height: 1.2;
 
     display: flex;
     flex-direction: column; /* Stack image over text */
